# ChangeLog for dev-haskell/cabal
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cabal/ChangeLog,v 1.46 2009/03/08 19:31:30 kolmodin Exp $

*cabal-1.6.0.2 (08 Mar 2009)

  08 Mar 2009; Lennart Kolmodin <kolmodin@gentoo.org> +cabal-1.6.0.2.ebuild:
  Version bump

  08 Mar 2009; Lennart Kolmodin <kolmodin@gentoo.org> cabal-1.6.0.1.ebuild:
  Add CABAL_CORE_LIB_GHC_PV="6.10.1" to make this a dummy package
  with GHC 6.10.1

*cabal-1.6.0.1 (19 Oct 2008)

  19 Oct 2008; Lennart Kolmodin <kolmodin@gentoo.org> +cabal-1.6.0.1.ebuild:
  Bump to latest available.
  We still bundle filepath-1.1.0.0 because of the cyclic dep.

  18 Oct 2008; nixnut <nixnut@gentoo.org> cabal-1.2.3.0.ebuild:
  Stable on ppc wrt bug 239368

  04 Oct 2008; Raúl Porcel <armin76@gentoo.org> cabal-1.2.3.0.ebuild:
  alpha/ia64 stable

  02 Oct 2008; Ferris McCormick <fmccor@gentoo.org> cabal-1.2.3.0.ebuild:
  Sparc stable, related to Bug #239368.

  15 Jul 2008; Jeroen Roovers <jer@gentoo.org> cabal-1.1.6.1.ebuild,
  cabal-1.1.6.2.ebuild, cabal-1.2.3.0.ebuild:
  Stable for HPPA (bug #230919).

  06 Jul 2008; Markus Meier <maekke@gentoo.org> cabal-1.2.3.0.ebuild:
  amd64/x86 stable, bug #230919

  03 May 2008; Lennart Kolmodin <kolmodin@gentoo.org> cabal-1.1.6.2.ebuild,
  cabal-1.2.3.0.ebuild:
  Disable the test suit as it is broken. See
  http://hackage.haskell.org/trac/hackage/ticket/212
  This fixes bug #220024.

*cabal-1.2.3.0 (14 Dec 2007)

  14 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> +cabal-1.2.3.0.ebuild:
  New major version.

  12 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> cabal-1.1.4.ebuild,
  cabal-1.1.6.1.ebuild, cabal-1.1.6.2.ebuild:
  Various minor maintanance changes. Remove unecessary blocker.
  Use new eclass functions to reduce code. Tidy code layout.
  Only install user guide if USE=doc.

  31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> cabal-1.1.3-r1.ebuild,