@@ -1,7 +1,11 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX cabal-1.1.3-ghc622.patch 678 RMD160 ed7decfd967a12476ad83892015767a37c5ce5ae SHA1 138db22abd979e08f4ff02060a30bc63d575a257 SHA256 d3524545844724687cf3377708d8cc381c06dbe71e618af884bac86361ea5479
 AUX cabal-1.1.4-make.patch 1972 RMD160 390e17aab566eadb0acda9777b6e2d36cc3bcef5 SHA1 e21972cf75fe5eabf24ea9864845228898bee0b5 SHA256 cee8833ac195f6da00bcdfdac0afe1805b44a4568b8f202f6e5f1cf591618d84
 DIST Cabal-1.6.0.1.tar.gz 189333 RMD160 5037a66e161ec08abf04630b0927d4af0e73e33b SHA1 a1f9a6597ab3ac4b0ad5fed25a9b7841a1769da3 SHA256 e70be80194e3fbd7e67e924566fbbe11f016b56679b396c8104d0fbe39918a45
 DIST Cabal-1.6.0.2.tar.gz 194005 RMD160 8cd4145518302ed1f1bda2d11037588928dca379 SHA1 ea8fdf447e0975427569700d8fe67afd4f48490b SHA256 44f3cb4e0ce744bb2413f581f364fd9d3e4b2e48f7dfc67f652c73ae55aba22c
+DIST Cabal-1.6.0.3.tar.gz 193608 RMD160 41e9e82776ec03768bdc43eb0ea299a1d76f7b19 SHA1 d6f4ed4a4c1d837f778baf3da7366943f8a81e0c SHA256 e5df4b9f13d3eaeb8b509cd6ed243bbb1bfafdf81c60ed963e1774f31eca6b6d
 DIST cabal-1.1.3.tar.gz 382024 RMD160 e361b676184d2f553cf5761c544ac4c32eefcb69 SHA1 e86f41403ea2d02b5d409195647ff97dec7557da SHA256 5c45f0c5f58ba2c16140b72221798a604242f59a155a75111b4cfd31092f836c
 DIST cabal-1.1.4.tar.gz 406169 RMD160 0c2b1a33af4512174cc6df6645662046427e9135 SHA1 e1091bd40d40f85b6836a17417f1a907fec20bad SHA256 1740abf0db8a6d18703e315a30ff81c51a06ec4a5f3a6c1927fa1530a0835b66
 DIST cabal-1.1.6.1.tar.gz 440851 RMD160 82e85e57f2747f7b38f68e6d11883252e83838e8 SHA1 7a0d052a2d3d7c56fb728798f9bc1c1063ba6010 SHA256 b59ce863c31bee561ca5d5ab2aa996856f8fc1b6297848868fc4f635d716b04e
@@ -16,5 +20,13 @@ EBUILD cabal-1.1.6.2.ebuild 1248 RMD160 89bf712dd444e12c2347d254a3001f372e2d5a5e
 EBUILD cabal-1.2.3.0.ebuild 1794 RMD160 50e15fcc3a87e511cbd51432eceb768243ae8819 SHA1 3bab412125883f32db33ac97b0595c9d9ec7e951 SHA256 cc2378940aa243424ca8568845b53ff3c95a96d321e41f3376aabafb58ff1b50
 EBUILD cabal-1.6.0.1.ebuild 1618 RMD160 ead45103285c7d8671c5d0b045992cfc1aeba46b SHA1 69dad0d7b271f715ebd1a00f0125d8e34347fdcd SHA256 ae6f3e6b0b176989a69ecb227a3d7909466acf6db48d67e8913a37ec753bc7b0
 EBUILD cabal-1.6.0.2.ebuild 1587 RMD160 2a28cb7fb7a772052c4c217247ed8e504b0d6fc0 SHA1 7ce0c4fb3a744b420fffd931b925ed228733dd95 SHA256 59794344d50e8dd4fa698db47489c01b138676e2d54e2a80449255b5f2130bde
-MISC ChangeLog 6141 RMD160 d73a2564f7de56a921e2e3442c1a0fa73f76a46c SHA1 e86e3487de6790edfd5bf42307e5922c74a4895a SHA256 4f9a8b844c0635538ec2ceaa566d296f90dd74e0ce77398ad1e93db37386b014
+EBUILD cabal-1.6.0.3.ebuild 1639 RMD160 55d44b1bcf1227327abe84bf49c46803301293fb SHA1 cbd1f01de9db07229e7db2938ce7fd2525b72d3c SHA256 dbc50d45f25f1e293d49b44c27cf2fe6143462fa26990202890b7553fe5ca886
+MISC ChangeLog 6265 RMD160 32560b960c96db9115809ebd57c49a9163e6d743 SHA1 c22b3e0b54cf2ef4323303392df4c14bc92559b7 SHA256 36b49c446c00fdf738675b67939c4e6db43faafe7339f23c1a29a09fb8dc04fe
 MISC metadata.xml 231 RMD160 8b37a8901d230433c69ffa03eeed903bca89249b SHA1 b77d396c72fd66ec7c09ae8de996a5ba50d9e482 SHA256 b1bacb51e08eb7f067d6a30020b5c45e4f4e48b5ec4640402ecaa34b78e2ae34
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.10 (GNU/Linux)
+
+iEYEARECAAYFAknrKW8ACgkQ1n/CYbXjntJugwCfW4I+fFUI5KbVRszczbLgu1Df
+tlYAoJgSud1/T/ttMIidaClpVVxDkLDJ
+=45gy
+-----END PGP SIGNATURE-----
