@@ -1,6 +1,11 @@
 # ChangeLog for dev-haskell/cabal
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cabal/ChangeLog,v 1.46 2009/03/08 19:31:30 kolmodin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cabal/ChangeLog,v 1.47 2009/04/19 13:38:45 kolmodin Exp $
+
+*cabal-1.6.0.3 (19 Apr 2009)
+
+  19 Apr 2009; Lennart Kolmodin <kolmodin@gentoo.org> +cabal-1.6.0.3.ebuild:
+  Version bump.
 
 *cabal-1.6.0.2 (08 Mar 2009)
 
